fixtures/type_errors/unknown_type_in_signature.tl
//Error:
//
//1: foo : Nope -> Nope { n -> n }
//        ^
//         Unknown type
foo : Nope -> Nope { n -> n }

main : Int { 4 }
---
4
